Navbar fix
button no longer cut off

--- a/ezticketz-cmps411/src/App.css
+++ b/ezticketz-cmps411/src/App.css
@@ -1,38 +1,4 @@
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  background: #4066FA;
-  padding: 10px 16px;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1000;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
 
-.navbar-logo {
-  color: white;
-  font-size: 20px;
-}
-
-.navbar-menu {
-  display: flex;
-  flex-wrap: wrap; /* Allow items to wrap to the next line */
-  list-style-type: none;
-  gap: 30px;
-  margin: 0;
-  padding: 0;
-  align-items: center;
-}
-
-.navbar-menu li {
-  white-space: nowrap; /* Prevent text from breaking onto multiple lines */
-}
-
-.navbar-menu li a {
-  text-decoration: none;
-  color: white;
-}
 
 /* Add margin to the content below the navbar */
 .page-content {
@@ -74,6 +40,7 @@ body {
   gap: 30px;
   margin: 0;
   align-items: center;
+  margin-right: 30px;
 }
 
 .navbar-menu li a {
